--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,14 @@
 /TestFunk.hi
 /TestFunk.hs
 /TestFunk.o
+/AbsFunk.hs.bak
+/DocFunk.tex.bak
+/ErrM.hs.bak
+/.Interpreter.hs.swp
+/LexFunk.x.bak
+/Makefile.bak
+/ParFunk.y.bak
+/PrintFunk.hs.bak
+/.runtest.py.swp
+/SkelFunk.hs.bak
+/TestFunk.hs.bak
