--- a/test/in/t30.in
+++ b/test/in/t30.in
@@ -1,7 +1,7 @@
 sgn x be 
 	if (eq x 0) then 0 
 		    else if (gt x 0) then 1 
-		               else (sgn (inv x)) 
+		               else (inv (sgn (inv x)))
 			 fi 
 	fi
 
