--- a/test/in/t37.in
+++ b/test/in/t37.in
@@ -1,4 +1,4 @@
-apply f x be (f x)
+int:apply int=>int=>int:f int:a int:b be (f a b)
 
 main
-(apply (lambda x y -> (plus (inv x) x)) 5 7)
+(apply (int:lambda int:x int:y -> (plus (inv x) x)) 5 7)
