--- a/test/in/t38.in
+++ b/test/in/t38.in
@@ -1,4 +1,4 @@
-apply f x  y be (f x y)
+int:apply int=>int=>int:f int:x  int:y be (f x y)
 
 main
-(apply (lambda y x -> (plus (inv x) y)) 5 7)
+(apply (int:lambda int:y int:x -> (plus (inv x) y)) 5 7)
