--- a/test/in/t29.in
+++ b/test/in/t29.in
@@ -1,4 +1,4 @@
-test a b c d e be (plus a (plus b (plus c (plus d (plus e 0)))))
+int:test int:a int:b int:c int:d int:e be (plus a (plus b (plus c (plus d (plus e 0)))))
 
 main
 (test 1 2 3 4 5)
