--- a/test/in/t32.in
+++ b/test/in/t32.in
@@ -1,8 +1,8 @@
-times2 a be (times 2 a);
-plus10 a be (plus 10 a);
-sqr a be (times a a);
+int:times2 int:a be (times 2 a);
+int:plus10 int:a be (plus 10 a);
+int:sqr int:a be (times a a);
 
-conv f g x be (f (g x))
+int:conv int=>int:f int=>int:g int:x be (f (g x))
 
 main
 (sqr (conv times2 plus10 1))
