--- a/test/in/t21.in
+++ b/test/in/t21.in
@@ -1,7 +1,7 @@
 main
 
-case [1, (plus 1 2), {3,2}] of
+case [1, (plus 1 2), 2] of
 	[1,2,3] -> 0
-	| [1,3,{2,3}] -> 1
-	| [1,3,{3,(plus 1 1)}] -> 2
-	| [] -> 3
+	| [1,3,3] -> 1
+	| [1,3,(plus 1 1)] -> 2
+	| int:[] -> 3
