--- a/test/in/t21.in
+++ b/test/in/t21.in
@@ -1,6 +1,8 @@
+[int]:elo be [1, (plus 1 2), 2] 
+
 main:int
 
-case [1, (plus 1 2), 2] of
+case elo of
 	[1,2,3] -> 0
 	| [1,3,3] -> 1
 	| [1,3,(plus 1 1)] -> 2
